--- a/static.html
+++ b/static.html
@@ -81,7 +81,8 @@
             <p><strong>The Da Vinci Code</strong> delves into numerous thought-provoking themes, including:</p>
             <dl>
                 <ul type="circle">
-                    <dt><li>The Intersection of Science and Religion</li></dt>
+                    <!-- lochana -->
+                    <dt><li>The Intersection of Science and Religion </li></dt>
                     <dd>The novel challenges readers to consider the coexistence of faith and reason, prompting discussions on how these two realms can complement or conflict with each other.</dd>
                     <dt><li>The Power of Symbols</li></dt>
                     <dd>Symbols play a pivotal role in the story, reminding us of their profound influence throughout history and their ability to convey complex ideas and hidden truths.</dd>
