--- a/static.html
+++ b/static.html
@@ -81,7 +81,6 @@
             <p><strong>The Da Vinci Code</strong> delves into numerous thought-provoking themes, including:</p>
             <dl>
                 <ul type="circle">
-                    <!-- lochana -->
                     <dt><li>The Intersection of Science and Religion </li></dt>
                     <dd>The novel challenges readers to consider the coexistence of faith and reason, prompting discussions on how these two realms can complement or conflict with each other.</dd>
                     <dt><li>The Power of Symbols</li></dt>
@@ -218,5 +217,6 @@
             </div>
         </div>
     </div>
+    <script src="./js/main.js" defer></script>
 </body>
 </html>
